--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,76 @@
-@(message: String)
 
-@main("Welcome to Play") {
+@main {
 
-    @play20.welcome(message)
+    <div class="container" ng-controller="ConfiguratorCtrl">
+
+        <div>
+            <h1 class="text-center" style="color:#FFF">Bref. Je configure mon épisode...</h1>
+        </div>
+
+        <div id="video" style="height:360px;">
+
+            <div class="text-center" ng-show="!activated">
+                <img  src="resources/splash.png" width="640px" height="360px"/>
+            </div>
+
+            <div id="content" ng-show="hasFlash && activated">
+                <script type="text/javascript" src="assets/flash/flowplayer.ipad-3.2.12.min.js"></script>
+
+                <div style="margin:auto; width: 640px; height: 360px;">
+                    <a style="display: block; width: 640px; height: 360px;" id="player"></a>
+                    <script type="text/javascript">
+                    flowplayer("player", "@routes.Assets.at("flash/flowplayer.swf")", {
+
+                    });
+                    </script>
+                </div>
+            </div>
+
+            <div class="text-center" ng-if="!hasFlash && activated">
+                <video id="videoPlayer" src="" autoplay autobuffer controls width="640px" height="360px" />
+                <!--<video id="videoPlayer" src="assets/test.m3u8" autoplay autobuffer controls width="640px" height="360px" />-->
+            </div>
+        </div>
+
+
+        <div>
+
+            <br/>
+
+            <div class="text-center">
+                <button class="btn btn-primary btn-xl " ng-click="generate()">Générer</button>
+            </div>
+
+            <br/>
+
+            <div class="panel panel-default" ng-repeat="vp in vps" >
+                <div class="panel-heading" ng-click="vp.visible=!vp.visible">
+                    <h3 class="panel-title">{{vp.name}}</h3>
+                </div>
+
+                <div ng-class="{collapse: !vp.visible}">
+                    <div class="panel-body btn-group">
+                        <button
+                        ng-repeat="option in vp.options"
+                        type="button"
+                        class="btn"
+                        ng-class="{'btn-success': vp.selected === option.id , 'btn-default': vp.selected != option.id}"
+                        ng-click="vp.selected=option.id">
+
+                            <img src="{{option.poster}}" height="45" width="80" >
+
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+    </div>
+
 
 }
