--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,32 @@
-@(title: String)(content: Html)
+@(content: Html)
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app="brefApp">
     <head>
-        <title>@title</title>
+        <title>Générateur 40 ans IRISA</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+
+        <link href="@routes.Assets.at("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+        <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
+
+        <script src="@routes.Assets.at("javascripts/flowplayer-3.2.12.min.js")" type="text/javascript"></script>
+
     </head>
     <body>
         @content
     </body>
+
+
+    <script src="@routes.Assets.at("javascripts/jquery-2.1.3.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
+
+
+
+
+    <script src="@routes.Assets.at("javascripts/configurator.js")" type="text/javascript"></script>
+
+
 </html>
