--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,14 +5,13 @@
 <html ng-app="brefApp">
     <head>
         <title>Générateur 40 ans IRISA</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link href="@routes.Assets.at("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
         <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
 
         <script src="@routes.Assets.at("javascripts/flowplayer-3.2.12.min.js")" type="text/javascript"></script>
-
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/flowplayer-3.2.12.min.js")"></script>
     </head>
     <body>
         @content
@@ -22,11 +21,5 @@
     <script src="@routes.Assets.at("javascripts/jquery-2.1.3.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
-
-
-
-
     <script src="@routes.Assets.at("javascripts/configurator.js")" type="text/javascript"></script>
-
-
 </html>
