--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,7 +21,7 @@
         <div class="row">
 
             <div class="text-center" ng-show="!activated">
-                <img src='@routes.Assets.at("images/visuel40ans.png")' class="video-format"/>
+                <img src='@routes.Assets.at("images/visuel40ans-scale.png")' class="video-format"/>
             </div>
 
             <div id="content" ng-show="activated">
