--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,15 +11,14 @@
         <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
 
         <script src="@routes.Assets.at("javascripts/flowplayer-3.2.12.min.js")" type="text/javascript"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/flowplayer-3.2.12.min.js")"></script>
     </head>
     <body>
         @content
     </body>
 
 
-    <script src="@routes.Assets.at("javascripts/jquery-2.1.3.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/configurator.js")" type="text/javascript"></script>
+    <script src='@routes.Assets.at("javascripts/jquery-2.1.3.min.js")' type="text/javascript"></script>
+    <script src='@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
+    <script src='@routes.Assets.at("javascripts/angular.min.js")' type="text/javascript"></script>
+    <script src='@routes.Assets.at("javascripts/configurator.js")' type="text/javascript"></script>
 </html>
