improve code and design

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html ng-app="brefApp">
+<html ng-app="irisaApp">
     <head>
         <title>Générateur 40 ans IRISA</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
