--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,14 +6,14 @@
         <div class="row">
             <div class="text-center">
                 <img src='@routes.Assets.at("images/logo40ansWeb.png")' height="80px">
-                <h1 class="title" >40 ans et pas une ride</h1>
+                <h1 class="title" >@Messages("index.title")</h1>
             </div>
         </div>
 
         <div class="row">
 
             <div class="text-center">
-                <button class="btn btn-primary btn-lg " ng-click="generate()">Je découvre mon épisode...</button>
+                <button class="btn btn-primary btn-lg " ng-click="generate()">@Messages("index.button")</button>
             </div>
 
         </div>
