--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,10 @@
 
 <html ng-app="irisaApp">
     <head>
-        <title>Générateur 40 ans IRISA</title>
+
+        <meta charset="UTF-8">
+
+        <title>@Messages("title")</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link href="@routes.Assets.at("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
