--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -13,7 +13,10 @@
         <div class="row">
 
             <div class="text-center">
-                <button class="btn btn-primary btn-lg " ng-click="generate()">@Messages("index.button")</button>
+                <button class="btn btn-primary btn-lg " ng-click="generate()">
+                    <span ng-if="!activated">@Messages("index.button.first")</span>
+                    <span ng-if="activated">@Messages("index.button.other")</span>
+                </button>
             </div>
 
         </div>
