--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,5 +23,6 @@
     <script src='@routes.Assets.at("javascripts/jquery-2.1.3.min.js")' type="text/javascript"></script>
     <script src='@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
     <script src='@routes.Assets.at("javascripts/angular.min.js")' type="text/javascript"></script>
+    <script src='@routes.Assets.at("javascripts/konami.js")' type="text/javascript"></script>
     <script src='@routes.Assets.at("javascripts/configurator.js")' type="text/javascript"></script>
 </html>
